--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -1197,6 +1197,10 @@ tr.spaceUnder>td {
     width: 90%;
 }
 
+.note-disabled{
+    opacity: 0.6;
+}
+
 /*********************************************** END DIVERS ************************************************/
 
 /************************************************** BY ID **************************************************/
