--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -30,7 +30,9 @@
     </div>
 
     <div class="section-description" id="section-description">
+        {% if section.master_section.description %}
         {{section.master_section.description|markdownify}}
+        {% endif %}
     </div>
 
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -77,7 +79,9 @@
                             <h2 class="mb-0">
                                 <button class="btn btn-link btn-block text-left " type="button">
                                     Q{{section.master_section.order_id}}.{{element.master_evaluation_element.order_id}} :
-                                    {{element.master_evaluation_element.name|markdownify}}
+                                    {% if element.master_evaluation_element.name %}
+                                        {{element.master_evaluation_element.name|markdownify}}
+                                    {% endif %}
                                 </button>
                             </h2>
 
@@ -139,7 +143,9 @@
 
                                 <div class="sub-question-headers grid-container-2-cols row margin-left-em" id="question-text">
                                     <div class="question-name" id="question-name">
+                                        {% if element.master_evaluation_element.question_text %}
                                         {{element.master_evaluation_element.question_text|markdownify}}
+                                        {% endif %}
                                     </div>
                                     {% if element.master_evaluation_element.explanation_text %}
                                     <div class="help-tip help-tip-explanation larger-tablet-absolute-position">
@@ -180,26 +186,21 @@
                                         </fieldset>
                                     {% endif %}
 
+                                    <!-- Reset the answers -->
                                     {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
-                                    <div class="flex-column mr-3">
-                                        <a class="reset-response row justify-content-end"
-                                           onclick="removeNoteEvaluation({{element.id}}, 'confirmationform')">
-                                            <p class="m-0">{% trans "Delete this note" %}</p>
-                                        </a>
-                                        <div class="row ml-1 justify-content-end">
-                                            <a class="btn-cursor"
-                                               onclick="archiveNote({{element.id}}, 'confirmationform')">
-                                                {% if element.user_notes_archived %}
-                                                <i class="fa fa-check-square-o"
-                                                   id="icon-{{element.id}}"></i>
-                                                {% else %}
-                                                <i class="fa fa-square-o"
-                                                   id="icon-{{element.id}}"></i>
-                                                {% endif %}
+                                        {% if element.has_condition_on and element|is_not_applicable %}
+                                            <a class="reset-response float-right remove-smaller-than-small-screen"
+                                               id="reset_{{element.id}}"
+                                               title="Inactive">
+                                                {% trans "Reset the answer" %}</a>
+                                        {% else %}
+                                            <a class="reset-response float-right" id="reset{{element.id}}"
+                                               onclick="resetChoice('{{element.id}}')">
+                                                <span class="remove-smaller-than-small-screen">{% trans "Reset the answer" %}</span>
+                                                <i class="fa fa-refresh remove-larger-than-large-screen"></i>
                                             </a>
-                                            <p class="m-0 ml-1">{% trans 'Archive this note' %}</p>
-                                        </div>
-                                    </div>
+
+                                            {% endif %}
                                     {% endif %}
                                 </div>
                             </div>
@@ -258,23 +259,7 @@
                                     </div>
                                   {% endif %}
                             </div>
-                            {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
-                            <div class="full-width center mt-2">
-                                {% if element.has_condition_on and element|is_not_applicable %}
-                                <a class="reset-response remove-smaller-than-small-screen"
-                                   id="reset_{{element.id}}"
-                                   title="Inactive">
-                                    <p class="m-0">{% trans "Reset the answer" %}</p></a>
-                                {% else %}
-                                <a class="reset-response" id="reset{{element.id}}"
-                                   onclick="resetChoice('{{element.id}}')">
-                                    <span class="remove-smaller-than-small-screen">{% trans "Reset the answer" %}</span>
-                                    <i class="fa fa-refresh remove-larger-than-large-screen"></i>
-                                </a>
 
-                                {% endif %}
-                            </div>
-                            {% endif %}
                             <div class="margin-10" id="confirmationform{{element.id}}"></div>
 
                             <div class='alert alert-warning' id="warningmessage_temporary{{element.id}}"
@@ -311,7 +296,9 @@
                                                     <div class="grid-container-2-cols">
                                                         <div class="grid-item">
                                                             <li class="list-with-disc margin-10">
+                                                                {% if resource.text %}
                                                                 [{{resource.type}}] - {{resource.text|markdownify}}
+                                                                {% endif %}
                                                             </li>
                                                         </div>
                                                         <div class="icon-list">
