Set back features

--- a/platform_code/assessment/templates/assessment/content-section.html
+++ b/platform_code/assessment/templates/assessment/content-section.html
@@ -186,24 +186,30 @@
                                         </fieldset>
                                     {% endif %}
 
-                                    <!-- Reset the answers -->
                                     {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
-                                        {% if element.has_condition_on and element|is_not_applicable %}
-                                            <a class="reset-response float-right remove-smaller-than-small-screen"
-                                               id="reset_{{element.id}}"
-                                               title="Inactive">
-                                                {% trans "Reset the answer" %}</a>
-                                        {% else %}
-                                            <a class="reset-response float-right" id="reset{{element.id}}"
-                                               onclick="resetChoice('{{element.id}}')">
-                                                <span class="remove-smaller-than-small-screen">{% trans "Reset the answer" %}</span>
-                                                <i class="fa fa-refresh remove-larger-than-large-screen"></i>
+                                    <div class="flex-column mr-3">
+                                        <a class="reset-response row justify-content-end"
+                                           onclick="removeNoteEvaluation({{element.id}}, 'confirmationform')">
+                                            <p class="m-0">{% trans "Delete this note" %}</p>
+                                        </a>
+                                        <div class="row ml-1 justify-content-end">
+                                            <a class="btn-cursor"
+                                               onclick="archiveNote({{element.id}}, 'confirmationform')">
+                                                {% if element.user_notes_archived %}
+                                                <i class="fa fa-check-square-o"
+                                                   id="icon-{{element.id}}"></i>
+                                                {% else %}
+                                                <i class="fa fa-square-o"
+                                                   id="icon-{{element.id}}"></i>
+                                                {% endif %}
                                             </a>
-
-                                            {% endif %}
+                                            <p class="m-0 ml-1">{% trans 'Archive this note' %}</p>
+                                        </div>
+                                    </div>
                                     {% endif %}
                                 </div>
                             </div>
+
 
                             <div class="wrapper">
                                 {% if forloop.counter != 1 %}
@@ -259,6 +265,23 @@
                                     </div>
                                   {% endif %}
                             </div>
+                            {% if evaluation.organisation|get_role:user == "admin" or evaluation.organisation|get_role:user == "editor" %}
+                            <div class="full-width center mt-2">
+                                {% if element.has_condition_on and element|is_not_applicable %}
+                                <a class="reset-response remove-smaller-than-small-screen"
+                                   id="reset_{{element.id}}"
+                                   title="Inactive">
+                                    <p class="m-0">{% trans "Reset the answer" %}</p></a>
+                                {% else %}
+                                <a class="reset-response" id="reset{{element.id}}"
+                                   onclick="resetChoice('{{element.id}}')">
+                                    <span class="remove-smaller-than-small-screen">{% trans "Reset the answer" %}</span>
+                                    <i class="fa fa-refresh remove-larger-than-large-screen"></i>
+                                </a>
+
+                                {% endif %}
+                            </div>
+                            {% endif %}
 
                             <div class="margin-10" id="confirmationform{{element.id}}"></div>
 
@@ -266,7 +289,7 @@
                                  style="visibility:hidden; height:1px;">
                                 {% blocktrans trimmed %}
                                 This evaluation element is not applicable due to the answer to this evaluation element
-                                {% endblocktrans %} {depends_on_dic|get_item:element}}
+                                {% endblocktrans %} {{ depends_on_dic|get_item:element }}
                             </div>
                         </form>
                         <!-- form used by archiveNote function-->
