--- a/platform_code/assessment/static/css/base.css
+++ b/platform_code/assessment/static/css/base.css
@@ -1259,6 +1259,13 @@ tr.spaceUnder>td {
     opacity: 0.6;
 }
 
+.element-notes-card {
+    border: solid 1px rgba(0,0,0,0.125);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 15px;
+}
+
 /*********************************************** END DIVERS ************************************************/
 
 /************************************************** BY ID **************************************************/
